--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "firebase": "^7.5.0",
     "next": "9.1.4",
     "react": "16.12.0",
     "react-dom": "16.12.0"
